[feat: added missing endpoint]